fix some mobile layout issues on project page

--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -78,5 +78,8 @@
 
   .sectionText {
     width: 100%;
+    padding: 0;
+    line-height: 1;
+    text-align: left;
   }
 }
